--- a/assets/style.css
+++ b/assets/style.css
@@ -45,8 +45,8 @@ footer p{
     text-align: center;
     font-size: 0.6rem;
     height:2rem;
-height:2rem;
-font-family: Bai Jamjuree;
+    height:2rem;
+    font-family: "Montserrat", sans-serif;
 }
 
 #container{ 
@@ -62,7 +62,7 @@ font-family: Bai Jamjuree;
          background-color: aqua;
          height: 20rem;
          flex-grow: 1;
-         flex-basis: calc(33% -6rem);
+         flex-basis: calc(33% - 6rem);
     }
 
     .cartao__conteudo{
